# AntColony

./: CMakeLists.txt  README.md
include/: camera.hpp  control.hpp  program.hpp  resvault.hpp  util.hpp
include/_/: sfml.hpp
include/sim/: _sim.hpp  ant.hpp  food.hpp  hive.hpp  object.hpp  pheromone.hpp  world.hpp
include/ui/: _ui.hpp  button.hpp  window.hpp
src/: main.cpp
